[gd_scene load_steps=11 format=3 uid="uid://cj38ka7yb8y1f"]

[ext_resource type="Texture2D" uid="uid://36efoaxoshut" path="res://assets/player.png" id="1_15dfr"]
[ext_resource type="Script" uid="uid://b8ljckjbkl4os" path="res://scripts/player.gd" id="1_jlpcf"]
[ext_resource type="Texture2D" uid="uid://dn20iumrdh85j" path="res://assets/gun.png" id="3_hfxgv"]
[ext_resource type="Texture2D" uid="uid://ff5uqv80xm63" path="res://assets/progress-bar-circle.png" id="4_ct2jf"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_jlpcf"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("GunContainer:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("GunContainer/GunSprite:flip_v")
properties/2/spawn = true
properties/2/replication_mode = 1

[sub_resource type="RectangleShape2D" id="RectangleShape2D_15dfr"]
size = Vector2(7.9, 7.9)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hfxgv"]
bg_color = Color(1, 0.3372549, 0.21960784, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hfxgv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ct2jf"]
bg_color = Color(0.3019608, 1, 0, 1)

[sub_resource type="SystemFont" id="SystemFont_hfxgv"]
subpixel_positioning = 0

[node name="Player" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 15
script = ExtResource("1_jlpcf")
speed = 50.0

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_jlpcf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_15dfr")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_15dfr")

[node name="GunContainer" type="Node2D" parent="."]

[node name="GunSprite" type="Sprite2D" parent="GunContainer"]
position = Vector2(9, 0)
texture = ExtResource("3_hfxgv")

[node name="Muzzle" type="Marker2D" parent="GunContainer/GunSprite"]
position = Vector2(3, 0)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(6, 6)
position_smoothing_enabled = true

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="FireRateTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="BuffTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -6.0
offset_top = 6.0
offset_right = 18.0
offset_bottom = 10.0
scale = Vector2(0.5, 0.5)
theme_override_styles/background = SubResource("StyleBoxFlat_hfxgv")
show_percentage = false

[node name="HealthBar" type="ProgressBar" parent="ProgressBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_hfxgv")
theme_override_styles/fill = SubResource("StyleBoxFlat_ct2jf")
value = 100.0
show_percentage = false

[node name="HUD" type="CanvasLayer" parent="."]

[node name="AmmoContainer" type="VBoxContainer" parent="HUD"]
offset_left = 311.0
offset_top = 237.0
offset_right = 425.0
offset_bottom = 458.0
alignment = 1

[node name="AmmoCounter" type="Label" parent="HUD/AmmoContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("SystemFont_hfxgv")
theme_override_font_sizes/font_size = 100
horizontal_alignment = 1
uppercase = true

[node name="ReloadProgressBar" type="TextureProgressBar" parent="HUD/AmmoContainer"]
layout_mode = 2
size_flags_horizontal = 4
max_value = 300.0
fill_mode = 5
texture_progress = ExtResource("4_ct2jf")
tint_under = Color(0, 0, 0, 0.75686276)
tint_over = Color(0, 0.32156864, 1, 1)
tint_progress = Color(0.55394334, 0.7065888, 1, 1)

[node name="MainMenu" type="Button" parent="HUD"]
offset_left = 813.0
offset_top = 119.0
offset_right = 1071.0
offset_bottom = 191.0
theme_override_font_sizes/font_size = 46
text = "Main Menu"

[node name="Name" type="Label" parent="HUD"]
offset_left = 880.0
offset_top = 728.0
offset_right = 1104.0
offset_bottom = 865.0
scale = Vector2(0.5, 0.5)
theme_override_font_sizes/font_size = 100
horizontal_alignment = 1

[connection signal="timeout" from="ReloadTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="FireRateTimer" to="." method="_on_fire_rate_timer_timeout"]
[connection signal="timeout" from="BuffTimer" to="." method="_on_buff_timer_timeout"]
[connection signal="pressed" from="HUD/MainMenu" to="." method="_on_main_menu_pressed"]
